tests/errors/unbalanced_braces.l26
{
    int x;
    x = 1;
    write x;
